--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -100,3 +100,16 @@ label_pt_filter_column_value = Value
 label_pt_filter_add_new = Add New
 diagram_selectAObjectToView = Select An Object
 DiagramFilterIcon = Filter Association Region
+diagramFilter = Filtrer les associations de Régions
+diagramPopOutButton = Popout
+diagramHighlight = Highlighting
+highlightColor = Highlighting Color
+highlightTransparency = Transparency of unselected objects
+palette = Palette Objectypes
+diagram_highlight_step = Steps
+objecttype = Object Type
+step_name = Step Name
+start_prop = Start Property
+end_prop = End Property
+color = Color
+displayjsonconfig = Display JSON Configuration
