--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -101,3 +101,16 @@ label_pt_filter_column_value = Valeur
 label_pt_filter_add_new = Ajouter Filtre
 diagram_selectAObjectToView = Selectionner un objet
 DiagramFilterIcon = Filtrer les Régions d'Associations
+diagramFilter = Filtrer les associations de Régions
+diagramPopOutButton = Popout
+diagramHighlight = Activer la mise en Evidence des object_description
+highlightColor = Coleur de Mise en Evidence
+highlightTransparency = Transparence Appliquées aux objets non sélectionnés
+palette = Objectype de la palette
+diagram_highlight_step = Etapes
+objecttype = Objet Type
+step_name = Nom de l''étape
+start_prop = Début
+end_prop = Fin
+color = Couleur
+displayjsonconfig = Affiché la configuration JSON
