--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -101,3 +101,16 @@ label_pt_filter_column_value = Valore
 label_pt_filter_add_new = Ajouta Filtra
 diagram_selectAObjectToView = Selectiona An Objecta
 DiagramFilterIcon = Filtra le Regioni delle Associazioni
+diagramFilter = Filtrer le associazioni di regioni
+diagramPopOutButton = Popout
+diagramHighlight = Evidenziazione
+highlightColor = Colore di evidenziazione
+highlightTransparency = Trasparenza di oggetti non selezionati
+palette = Palette Objectypes
+diagram_highlight_step = Passaggi
+objecttype = Tipo di oggetto
+step_name = Nome passaggio
+start_prop = Avvia proprietà
+end_prop = Proprietà finale
+color = Color
+displayjsonconfig = Visualizza configurazione JSON
