fixing label and bugs

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -92,6 +92,7 @@ clearFilterAtStart = Clear Filter At Start
 freezeFirstOption = Freeze Option Column
 itemPerPages = List of possible choices for the number of objects per page
 frozen = Frozen
+groupableTable = Groupable Column
 clearButtonName = Clear Filters
 displayjsonconfig = Display JSON Configuration
 label_pt_filter_column_property = Property
@@ -103,6 +104,8 @@ DiagramFilterIcon = Filter Association Region
 diagramFilter = Filtrer les associations de Régions
 diagramPopOutButton = Popout
 diagramHighlight = Highlighting
+Highlight = Highlight
+Steps = Steps
 highlightColor = Highlighting Color
 highlightTransparency = Transparency of unselected objects
 palette = Palette Objectypes
@@ -113,3 +116,15 @@ start_prop = Start Property
 end_prop = End Property
 color = Color
 displayjsonconfig = Display JSON Configuration
+property_lookup = Dropdown Property
+property_lookup_value = Properties / Value
+imageUrl = Image url
+Icon = Icon
+colorIcon = Icon Color
+colorValue = Text Color
+property_url = Url property
+textToReplaceURL = Text to Display
+openUrlInNewTab = Open link in new tab
+property_boolean = Boolean property
+useIconToDisplayTrueFalse = Use an icon
+property_numeric = Number Property
