--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -92,6 +92,7 @@ clearFilterAtStart = Enlever les filtres au démarrage
 freezeFirstOption = Geler la première colone
 itemPerPages = Liste des choix possible du nombre d''objet par page
 frozen = Geler
+groupableTable = Colonne Groupable
 clearButtonName = Effacer les Filtres
 displayjsonconfig = Afficher la Configuration JSON
 donotdisplaytitle = Ne Pas Afficher Le Titre
@@ -103,14 +104,28 @@ diagram_selectAObjectToView = Selectionner un objet
 DiagramFilterIcon = Filtrer les Régions d'Associations
 diagramFilter = Filtrer les associations de Régions
 diagramPopOutButton = Popout
-diagramHighlight = Activer la mise en Evidence des object_description
+diagramHighlight = Activer la mise en Evidence des Objets
+Highlight = Mise En évidence
 highlightColor = Coleur de Mise en Evidence
 highlightTransparency = Transparence Appliquées aux objets non sélectionnés
+Steps = Etape
 palette = Objectype de la palette
 diagram_highlight_step = Etapes
-objecttype = Objet Type
+objecttype = ObjetType
 step_name = Nom de l''étape
 start_prop = Début
 end_prop = Fin
 color = Couleur
+property_lookup = Propriété Liste Déroulante
+property_lookup_value = Propriétés / Valeur
+imageUrl = Url de l'image
+Icon = Icône
+colorIcon = Couleur de l''icône
+colorValue = Couleur du texte
 displayjsonconfig = Affiché la configuration JSON
+property_url = Propriété Lien HyperTexte
+textToReplaceURL = Texte à Afficher
+openUrlInNewTab = Ouvrir le lien dans une nouvelle tab
+property_boolean = Propriété Booléane
+useIconToDisplayTrueFalse = Utiliser un icône
+property_numeric = Propriété Numérique
