--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -106,6 +106,8 @@ diagramPopOutButton = Popout
 diagramHighlight = Evidenziazione
 highlightColor = Colore di evidenziazione
 highlightTransparency = Trasparenza di oggetti non selezionati
+Highlight = Highlight
+Steps = Steps
 palette = Palette Objectypes
 diagram_highlight_step = Passaggi
 objecttype = Tipo di oggetto
@@ -114,3 +116,15 @@ start_prop = Avvia proprietà
 end_prop = Proprietà finale
 color = Color
 displayjsonconfig = Visualizza configurazione JSON
+property_lookup = Dropdown Property
+property_lookup_value = Properties / Value
+imageUrl = Image url
+Icon = Icon
+colorIcon = Icon Color
+colorValue = Text Color
+property_url = Url property
+textToReplaceURL = Text to Display
+openUrlInNewTab = Open link in new tab
+property_boolean = Boolean property
+useIconToDisplayTrueFalse = Use an icon
+property_numeric = Number Property
