diagram screen shot and translation

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -101,8 +101,9 @@ label_pt_filter_column_value = Value
 label_pt_filter_add_new = Add New
 diagram_selectAObjectToView = Select An Object
 DiagramFilterIcon = Filter Association Region
-diagramFilter = Filtrer les associations de Régions
+diagramFilter = Filter Association Region
 diagramPopOutButton = Popout
+diagramPopOutToUse = Diagram Popout to use
 diagramHighlight = Highlighting
 Highlight = Highlight
 Steps = Steps
