adding global mapping

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -131,3 +131,4 @@ openUrlInNewTab = Open link in new tab
 property_boolean = Boolean property
 useIconToDisplayTrueFalse = Use an icon
 property_numeric = Number Property
+property_hardcoded = Global Mapping
