--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -136,3 +136,6 @@ property_hardcoded = Mapping Globaux
 diagram_drilldown_filter = Filtres Drill Down
 diagram_drilldown_message_to_display = Message à Afficher
 dontapplytorole = Ne pas Appliquer à ces Roles
+open = Ouvrir
+close = Fermer
+right_text_expand_button = Bouton D'extension sur la droite avec du texte
