--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -138,4 +138,7 @@ diagram_drilldown_message_to_display = Message à Afficher
 dontapplytorole = Ne pas Appliquer à ces Roles
 open = Ouvrir
 close = Fermer
-right_text_expand_button = Bouton D'extension sur la droite avec du texte
+right_text_expand_button = Bouton D''extension sur la droite
+sortby = Triés par 
+previous = Précédent
+next = Suivant
