--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -142,3 +142,12 @@ right_text_expand_button = Bouton D''extension sur la droite
 sortby = Triés par 
 previous = Précédent
 next = Suivant
+sort_by = Triés par 
+textIfEmpty = Texte Si Vide
+descriptionIfEmpty = Description Si Vide
+linkTextIfEmpty = Texte du Lien Si Vide
+linkIfEmpty = Lien Si Vide
+pictureIfEmpty = Image Si Vide
+description = Description
+pictureLeft = Image à Gauche
+pictureRight = Image à Droite
