--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -141,3 +141,12 @@ right_text_expand_button = Expand Button With Text
 sortby = Sort By
 previous = Previous
 next = Next
+sort_by = Sort By
+textIfEmpty = Text If Empty
+descriptionIfEmpty = Description Text If Empty
+linkTextIfEmpty = TextLink If Empty
+linkIfEmpty = Link If Empty
+pictureIfEmpty = Picture If Empty
+description = Description
+pictureLeft = Left Picture
+pictureRight = Right Picture
