Fix a lot of bug in the workflow engine

--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -150,3 +150,25 @@ pictureIfEmpty = Picture If Empty
 description = Description
 pictureLeft = Left Picture
 pictureRight = Right Picture
+objectType = Object Type
+cwrole_to_use_share_workflow = CwRole That will be used by the Workflow Engine
+sce_schema = Graphical View
+form_input = Input Configuration
+label = label
+readonly = Read Only
+mandatory = Mandatory
+scriptname = Scriptname
+disable_lookup = Lookup to disable
+value = Value
+step_settings = Step Mapping Configuration
+next_step = Next Step Button Configuration
+stepName = Step Name
+mapped_to_the_creator = Mapped to the creator of the workflow
+createObject = Create the Final Object
+shareWorkflow_notification_label = Notification Title
+shareWorkflow_notification_message = Notification Message
+shareWorkflow = Enable Notification
+cwrole = Cw Role
+message = Informative Message
+cwWorkflow = Workflow
+fakeScriptname = Scriptname to use in other property value
