--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -151,3 +151,25 @@ pictureIfEmpty = Image Si Vide
 description = Description
 pictureLeft = Image à Gauche
 pictureRight = Image à Droite
+objectType = Object Type
+cwrole_to_use_share_workflow = CwRole That will be used by the Workflow Engine
+sce_schema = Graphical View
+form_input = Input Configuration
+label = label
+readonly = Read Only
+mandatory = Mandatory
+scriptname = Scriptname
+disable_lookup = Lookup to disable
+value = Value
+step_settings = Step Mapping Configuration
+next_step = Next Step Button Configuration
+stepName = Step Name
+mapped_to_the_creator = Mapped to the creator of the workflow
+createObject = Create the Final Object
+shareWorkflow_notification_label = Notification Title
+shareWorkflow_notification_message = Notification Message
+shareWorkflow = Enable Notification
+cwrole = Cw Role
+message = Informative Message
+fakeScriptname = Scriptname to use in other property value
+cwWorkflow = Workflow
