--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -173,3 +173,4 @@ cwrole = Cw Role
 message = Informative Message
 fakeScriptname = Scriptname to use in other property value
 cwWorkflow = Workflow
+readOnlyDocument = Document Section in ReadOnly
