--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -174,3 +174,8 @@ message = Informative Message
 fakeScriptname = Scriptname to use in other property value
 cwWorkflow = Workflow
 readOnlyDocument = Document Section in ReadOnly
+cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
+noResult = No Result
+toManyResult = Too many result to display.... Please Reduce the scope by typing some text
+wiCompletedBy = Completed By
+selectDocuments = Select Document(s) to Attach
