--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -172,3 +172,10 @@ cwrole = Cw Role
 message = Informative Message
 cwWorkflow = Workflow
 fakeScriptname = Scriptname to use in other property value
+cwWorkflow = Workflow
+readOnlyDocument = Document Section in ReadOnly
+cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
+noResult = No Result
+toManyResult = Too many result to display.... Please Reduce the scope by typing some text
+wiCompletedBy = Completed By
+selectDocuments = Select Document(s) to Attach
