--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -179,3 +179,4 @@ noResult = No Result
 toManyResult = Too many result to display.... Please Reduce the scope by typing some text
 wiCompletedBy = Completed By
 selectDocuments = Select Document(s) to Attach
+otherPeopleAreWorkingOn = Other People Are Working On This
