manage doc Property output, manage wi scenario and objectype prop

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -175,3 +175,4 @@ cwWorkflow = Workflow
 readOnlyDocument = Document Section in ReadOnly
 cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
 otherPeopleAreWorkingOn = Other People Are Working On This
+document_property = Property for document list
