--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -170,9 +170,14 @@ shareWorkflow_notification_message = Notification Message
 shareWorkflow = Enable Notification
 cwrole = Cw Role
 message = Informative Message
+cwWorkflow = Workflow
 fakeScriptname = Scriptname to use in other property value
 cwWorkflow = Workflow
 readOnlyDocument = Document Section in ReadOnly
 cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
+noResult = No Result
+toManyResult = Too many result to display.... Please Reduce the scope by typing some text
+wiCompletedBy = Completed By
+selectDocuments = Select Document(s) to Attach
 otherPeopleAreWorkingOn = Other People Are Working On This
 document_property = Property for document list
