--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -181,3 +181,4 @@ wiCompletedBy = Completed By
 selectDocuments = Select Document(s) to Attach
 otherPeopleAreWorkingOn = Other People Are Working On This
 document_property = Property for document list
+associationType = Association Type
