--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -183,3 +183,4 @@ otherPeopleAreWorkingOn = Other People Are Working On This
 document_property = Property for document list
 associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
+ignoreMandatory = Ignore Mandatory Fields
