--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -184,3 +184,4 @@ otherPeopleAreWorkingOn = Other People Are Working On This
 document_property = Property for document list
 associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
+ignoreMandatory = Ignore Mandatory Fields
