--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -175,7 +175,9 @@ cwWorkflow = Workflow
 fakeScriptname = Scriptname to use in other property value
 cwWorkflow = Workflow
 readOnlyDocument = Document Section in ReadOnly
+cannotEditOrReadThisWorkflow = You don''t have the access right to read this Workflow Item
 cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
+adminMode = You can edit this request since you are an admin
 noResult = No Result
 toManyResult = Too many result to display.... Please Reduce the scope by typing some text
 wiCompletedBy = Completed By
