--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -188,3 +188,4 @@ document_property = Property for document list
 associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
 ignoreMandatory = Ignore Mandatory Fields
+cw_user_view = CwUser View
