adding transparent display and fix width

--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -187,3 +187,6 @@ associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
 ignoreMandatory = Ignore Mandatory Fields
 cw_user_view = CwUser View
+sort=Sort
+transparent=Transparente
+fixWidth=Largeur Fixe
