--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -189,6 +189,6 @@ associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
 ignoreMandatory = Ignore Mandatory Fields
 cw_user_view = CwUser View
-sort=Trier par
+sortBy=Trier par
 transparent=Transparente
 fixWidth=Largeur Fixe
