--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -89,6 +89,7 @@ tableHeight = Height of the Table (%)
 order = Order
 donotdisplaytitle = Don't Display Title
 specificPopout = Popout to use
+removeOptionColumn = Remove Option Column
 grid_drop_column = Drag Column Header here to group
 clearFilterAtStart = Clear Filter At Start
 freezeFirstOption = Freeze Option Column
