Adding feature for unit display

--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -192,3 +192,7 @@ sortBy=Sort
 transparent=Transparente
 fixWidth=Largeur Fixe
 dupe_anyway = Force duplication
+unit = Unit
+infront = In Front ?
+decimalseparator = Decimal Splitter
+thousandseparator = Thousand Splitter
