--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -192,3 +192,7 @@ sortBy=Sort By
 transparent=Transparent
 fixWidth=Fixed Width
 dupe_anyway = Force duplication
+unit = Unit
+infront = In Front ?
+decimalseparator = Decimal Splitter
+thousandseparator = Thousand Splitter
