Fix numeric property

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -120,18 +120,18 @@ start_prop = Start Property
 end_prop = End Property
 color = Color
 displayjsonconfig = Display JSON Configuration
-property_lookup = Dropdown Property
+property_lookup = Dropdown
 property_lookup_value = Properties / Value
 imageUrl = Image url
 Icon = Icon
 colorIcon = Icon Color
 colorValue = Text Color
-property_url = Url property
+property_url = Url
 textToReplaceURL = Text to Display
 openUrlInNewTab = Open link in new tab
-property_boolean = Boolean property
+property_boolean = Boolean
 useIconToDisplayTrueFalse = Use an icon
-property_numeric = Number Property
+property_numeric = Number
 property_hardcoded = Global Mapping
 diagram_drilldown_filter = Drill Down Filters
 diagram_drilldown_message_to_display = Message To Display
@@ -198,3 +198,5 @@ decimalseparator = Decimal Splitter
 thousandseparator = Thousand Splitter
 objectype = Object Type
 objectTypeUsedForMemoDefinitionMapping = Index Page to use for Mapping MemoText
+property_memo = MemoText
+template_url = Url Template
