--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -120,19 +120,19 @@ step_name = Nom de l''étape
 start_prop = Début
 end_prop = Fin
 color = Couleur
-property_lookup = Propriété Liste Déroulante
+property_lookup = Liste Déroulante
 property_lookup_value = Propriétés / Valeur
 imageUrl = Url de l'image
 Icon = Icône
 colorIcon = Couleur de l''icône
 colorValue = Couleur du texte
 displayjsonconfig = Affiché la configuration JSON
-property_url = Propriété Lien HyperTexte
+property_url = Lien HyperTexte
 textToReplaceURL = Texte à Afficher
 openUrlInNewTab = Ouvrir le lien dans une nouvelle tab
-property_boolean = Propriété Booléane
+property_boolean = Booléane
 useIconToDisplayTrueFalse = Utiliser un icône
-property_numeric = Propriété Numérique
+property_numeric = Numérique
 property_hardcoded = Mapping Globaux
 diagram_drilldown_filter = Filtres Drill Down
 diagram_drilldown_message_to_display = Message à Afficher
@@ -190,9 +190,13 @@ associationType = Association Type
 applyontotheserole = If you select at least one role, it will be visible only for this role
 ignoreMandatory = Ignore Mandatory Fields
 cw_user_view = CwUser View
-sortBy=Trier par
-transparent=Transparente
-fixWidth=Largeur Fixe
+sortBy = Trier par
+transparent = Transparente
+fixWidth = Largeur Fixe
 dupe_anyway = Forcer la Duplication même s'il y a un approuver
-objectype = Objet Type
-objectTypeUsedForMemoDefinitionMapping = Index Page à utiliser pour le mapping dans les memotextes
+unit = Unité
+infront = Devant?
+decimalseparator = Séparateur Décimal
+thousandseparator = Sépatateur Milliers
+property_memo = MemoText
+template_url = Url du template Word
