--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -200,3 +200,5 @@ decimalseparator = Séparateur Décimal
 thousandseparator = Sépatateur Milliers
 property_memo = MemoText
 template_url = Url du template Word
+indexPage=Index Page
+objectPage=Object Page
