--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -202,3 +202,4 @@ property_memo = MemoText
 template_url = Url du template Word
 indexPage=Index Page
 objectPage=Object Page
+noPadding=No Padding
