adding option for link in box

--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -203,3 +203,5 @@ template_url = Url Template
 indexPage=Index Page
 objectPage=Object Page
 noPadding=No Padding
+homepage_image_fontsize=FontSize
+homepage_image_roundshape=Round Shape
