--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -205,3 +205,7 @@ objectPage=Object Page
 noPadding=No Padding
 homepage_image_fontsize=Taille de la Police
 homepage_image_roundshape=Forme arrondie
+grid_filter_donotcontains=Ne Contient Pas
+grid_filter_startwith=Commmence Par
+grid_filter_eq=Egal à
+grid_filter_empty=Est Vide
