--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -212,3 +212,4 @@ grid_filter_empty=Est Vide
 giveIndexContext=Transmettre le contexte index
 giveSingleContext=Transmettre le contexte single
 getContextFrom=Récuperer le contexte de
+hidden=Invisible
