--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -213,3 +213,4 @@ giveIndexContext=Give Index Context
 giveSingleContext=Give Single Context
 getContextFrom=Get Context From
 hidden=Hidden
+checkInWebmodeler=Check In Webmodeler
