--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -213,3 +213,4 @@ giveIndexContext=Transmettre le contexte index
 giveSingleContext=Transmettre le contexte single
 getContextFrom=Récuperer le contexte de
 hidden=Invisible
+checkInWebmodeler=Montrer le diagramme dans webModeler
