--- a/src/cwBackup/i18n/fields.translations_en.txt
+++ b/src/cwBackup/i18n/fields.translations_en.txt
@@ -1,5 +1,5 @@
-cwbackup_objecttypetodisplay = ObjectType to display in cwbackup 
+cwbackup_objecttypetodisplay = Objects To Include
 cwbackup_configureobjectype = ObjectType to Configure
 cwbackup_propertytoexclude = Property to Exclude
 cwbackup_associationtoexclude = Association Target ObjectType to Exclude
-cwBackup = cwBackup
+cwBackup = Backup
