--- a/src/i18n/Fields.translations_it.txt
+++ b/src/i18n/Fields.translations_it.txt
@@ -214,3 +214,6 @@ giveSingleContext=Give Single Context
 getContextFrom=Get Context From
 hidden=Hidden
 checkInWebmodeler=Montrer le diagramme dans webModeler
+hide_print_button=Hide Print Button
+beta_print_button=Improved Print (beta)
+misc=Miscellanious
