--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -203,6 +203,7 @@ template_url = Url du template Word
 indexPage=Index Page
 objectPage=Object Page
 noPadding=No Padding
+mergeWithBottom=Accoller avec le display d'en dessous (Beta)
 homepage_image_fontsize=Taille de la Police
 homepage_image_roundshape=Forme arrondie
 grid_filter_donotcontains=Ne Contient Pas
