Add feature hide task andnotification

--- a/src/i18n/Fields.translations_fr.txt
+++ b/src/i18n/Fields.translations_fr.txt
@@ -218,3 +218,10 @@ checkInWebmodeler=Montrer le diagramme dans webModeler
 hide_print_button=Cacher le bouton d'impression
 beta_print_button=Impression Amélioré (beta)
 misc=Divers
+menu=Menu
+homepage_custom_remove_my_tasks=Cacher Menu Mes Taches
+homepage_custom_remove_my_notifications=Cacher Menu Notifications
+dontapplyontotheserole=Cacher Si l''utilisateur fait parti de ce role
+link_overwrite=Remplacer par ce lien
+hide_print_button=Cacher Bouton Impression
+beta_print_button=Nouveau Bouton Impression
