--- a/src/i18n/Fields.translations_en.txt
+++ b/src/i18n/Fields.translations_en.txt
@@ -173,7 +173,8 @@ cwrole = Cw Role
 message = Informative Message
 cwWorkflow = Workflow
 fakeScriptname = Scriptname to use in other property value
-cwWorkflow = Workflow
+originalObjects = Original Item
+OtherWorkflowOnTheSameItem = Other Workflow On the Item
 readOnlyDocument = Document Section in ReadOnly
 cannotEditOrReadThisWorkflow = You don''t have the access right to read this Workflow Item
 cannotEditThisWorkflow = You don''t have the access right to edit this Workflow Item
